# Olio-kevat2025

./: README.md
olio_vk_tht_2/: CMakeLists.txt  game.cpp  game.h  main.cpp
olio_vktht_1/: CMakeLists.txt  main.cpp
vk3_tht/: CMakeLists.txt  chef.cpp  chef.h  italianChef.cpp  italianChef.h  main.cpp
vk5_tht/: CMakeLists.txt  main.cpp  notifikaatori.h  notifikaattori.cpp  seuraaja.cpp  seuraaja.h
